--- a/index.html
+++ b/index.html
@@ -17,32 +17,26 @@
 			</div>
 		</div>
 		<a href="index.html"><img class="logo" src="images/applelogo.png"></a>
-		<a href="" onclick="buy()">Buy Now</a>
+		<a href="order.html">Buy Now</a>
 	</div>
 
 	<div id="container">
 		<div><img id="jumptoi11pro" class="iphone11proimg" src="images/iphone11pro.jpg"></div>
 		<div class="name">iPhone 11 Pro</div></br>
 		<div class="desc">Pro cameras. Pro display. Pro performance.</div></br>
-		<div><a class="buynow" href="" onclick="buy()">Buy Now</a></div>
+		<div><a class="buynow" href="order.html">Buy Now</a></div>
 		</br></br></br>
 
 		<div><img id="jumptoi11" class="iphone11img" src="images/iphone-11.jpg"></div>
 		<div class="name">iPhone 11</div></br>
 		<div class="desc">Just the right amount of everything.</div></br>
-		<div><a class="buynow" href="" onclick="buy()">Buy Now</a></div>
+		<div><a class="buynow" href="order.html">Buy Now</a></div>
 		</br></br></br>
 	</div>
 
 	<footer>
 		Copyright © 2020 Apple Inc. All rights reserved.
 	</footer>
-
-	<script>
-		function buy(){
-        alert("Sorry, we are currently out of stock due to the current Covid-19 pandemic. Stay home & stay safe!")
-      };
-	</script>
 
 </body>
 </html>
